<resources>
    <string name="app_name">IBA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="item_content">Coffee naturally contains a variety of compounds including caffeine, antioxidants and diterpenes. These contribute not only to the unique flavour but also to the well-researched physiological effects of coffee.</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="item_price">3,500 MMK</string>
    <string name="item_name">Coco Coffee</string>
    <string name="instock">In Stock</string>
    <string name="title_activity_game_break">GameBreak</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="filter">Filter By</string>
    <string name="all_product">All Products</string>
    <string name="sport_drink">Sport Drinks</string>
    <string name="cold_drink">Cold Drinks</string>
    <string name="coffee">Coffee</string>
    <string name="result">Result</string>
    <string name="all">All</string>
    <string name="by_brand">by Brand</string>
    <string name="by_category">by Category</string>
    <string name="product_detail">Product Details</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="title_activity_animation2">Animation2Activity</string>
    <string name="back_activity">Back Activity</string>
    <string name="next_activity">next Activity</string>
    <string name="coco_coffee">CoCo Coffee</string>
    <string name="search">Search</string>
    <string name="mmk">MMK 3,500</string>
    <string name="count">12</string>
    <string name="tv_sign_in">Sign In</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="password">password</string>
    <string name="title_activity_base_drawer">BaseDrawerActivity</string>
    <string name="save">Save</string>
    <string name="product">Product</string>
    <string name="cart">cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax(5%)</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="sign_in">Sign In</string>
    <string name="item_count">3 Items in your carts</string>
    <string name="mmk_sub_total">MMK 10,500</string>
    <string name="mmk_tax">MMK 525</string>
    <string name="mmk_total">MMK 11,025</string>
    <string name="msg_no_data">No Data To Display</string>
    <string name="btn_refresh">Refresh</string>
</resources>
