<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium_2">

    <android.support.constraint.Guideline
        android:id="@+id/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.00" />

    <org.mmtextview.components.MMTextView
        android:id="@+id/tvCartCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_shopping_cart_black_24dp"
        android:drawablePadding="@dimen/margin_medium"
        android:drawableTint="@android:color/secondary_text_dark"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/item_count"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideText" />

    <android.support.constraint.Guideline
        android:id="@+id/guideRecyclerTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideRecyclerBottom"
        app:layout_constraintTop_toBottomOf="@+id/guideRecyclerTop">

        <com.creative_webstudio.iba.components.SmartRecyclerView
            android:id="@+id/rv_cart_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <include
            android:id="@+id/vp_empty_product"
            layout="@layout/view_pod_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>


    <android.support.constraint.Guideline
        android:id="@+id/guideRecyclerBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guideSpacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />


    <android.support.constraint.Guideline
        android:id="@+id/guideSpacingBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guideBottomTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />


    <android.support.constraint.Guideline
        android:id="@+id/guideLinearEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideSpacingBottom"
        app:layout_constraintEnd_toStartOf="@id/guideLinearEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideSpacing">

        <org.mmtextview.components.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtotal" />

        <org.mmtextview.components.MMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax" />

        <org.mmtextview.components.MMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideSpacingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideLinearEnd"
        app:layout_constraintTop_toBottomOf="@+id/guideSpacing">

        <org.mmtextview.components.MMTextView
            android:id="@+id/tvSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmk_sub_total" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/tvTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmk_tax" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmk_total"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/small_rounded_indian_red_bg"
        android:text="Order Now"
        android:textAllCaps="false"
        android:textColor="@color/backgroundColor"
        app:layout_constraintTop_toBottomOf="@id/guideBottomTop" />

</android.support.constraint.ConstraintLayout>