<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_medium"
    android:layout_marginStart="@dimen/margin_medium"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:scaleType="centerCrop"
        android:src="@drawable/coco_coffee" />

    <org.mmtextview.components.MMTextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:layout_toEndOf="@+id/iv_product"
        android:text="@string/coco_coffee"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_regular_3x"
        android:textStyle="bold" />

    <org.mmtextview.components.MMTextView
        android:id="@+id/tv_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_product_name"
        android:layout_gravity="center|top"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_toEndOf="@+id/iv_product"
        android:text="@string/instock"
        android:textColor="@color/limeGreen"
        android:textSize="@dimen/text_regular" />

    <org.mmtextview.components.MMTextView
        android:id="@+id/tv_MMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center|top"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/mmk"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_regular_2x" />

</RelativeLayout>